# Google-Hash-Code-2022-Practice-Problem

./: README.md  validate.py
output_files/sol1/: a_an_example.out  b_basic.out  c_coarse.out  d_difficult.out  e_elaborate.out
output_files/sol2/: d_difficult.out  e_elaborate.out
output_files/sol3/: c_coarse.out  d_difficult.out  e_elaborate.out
sol1/: CMakeLists.txt  Data.h  main.cpp
sol2/: BoundedPriorityQueue.h  CMakeLists.txt  Data.h  SimulatedAnnealing.h  SimulationState.h  main.cpp
sol3/: BoundedPriorityQueue.h  Data.h  Defines.h  FitnessEvaluator.cuh  GpuIngredientMap.cuh
sol3/sol3/: Data.h  Defines.h  EvaluateFitnessKernel.cuh  FitnessEvaluator.cuh  GeneticSolver.h  GpuIngredientMap.cuh  Individual.h  SimulatedAnnealingParallel.h  main.cu
